--- a/src/lib/css/Button.css
+++ b/src/lib/css/Button.css
@@ -3,4 +3,5 @@
 @import url('./Button.shapes.css');
 @import url('./Button.secondary.css');
 @import url('./Button.secondary.colorful.css');
+@import url('./Button.tool.css');
 @import url('./Button.tool.colorful.css');
