--- a/src/lib/css/MenuSeparator.base.css
+++ b/src/lib/css/MenuSeparator.base.css
@@ -1,4 +1,4 @@
-.sterling-menu-item-separator {
+.sterling-menu-separator {
   height: 2px;
   background-color: var(--stsv-common__border-color);
   margin: 0.1em 0;
