--- a/src/lib/css/sterling.css
+++ b/src/lib/css/sterling.css
@@ -18,6 +18,7 @@
 @import url('./MenuBar.css');
 @import url('./MenuButton.css');
 @import url('./MenuItem.css');
+@import url('./MenuItemDisplay.css');
 @import url('./MenuSeparator.css');
 @import url('./Popover.css');
 @import url('./Progress.css');
