--- a/src/lib/css/Label.boxed.css
+++ b/src/lib/css/Label.boxed.css
@@ -1,4 +1,4 @@
-.sterling-label.container {
+.sterling-label.boxed {
   background-color: var(--stsv-input__background-color);
   border-color: var(--stsv-input__border-color);
   border-radius: 3px;
@@ -6,26 +6,26 @@
   border-width: 2px;
 }
 
-.sterling-label.container:not(.disabled):hover {
+.sterling-label.boxed:not(.disabled):hover {
   background-color: var(--stsv-input__background-color--hover);
   border-color: var(--stsv-input__border-color--hover);
   color: var(--stsv-input__color--hover);
 }
 
-.sterling-label.container:focus-within,
-.sterling-label.container:focus-within:hover {
+.sterling-label.boxed:focus-within,
+.sterling-label.boxed:focus-within:hover {
   background-color: var(--stsv-input__background-color--focus);
   border-color: var(--stsv-input__border-color--focus);
   color: var(--stsv-input__color--focus);
 }
 
-.sterling-label.container.using-keyboard:focus-within {
+.sterling-label.boxed.using-keyboard:focus-within {
   outline-color: var(--stsv-common__outline-color);
   outline-offset: 0;
   outline-style: solid;
   outline-width: 2px;
 }
 
-.sterling-label.container .text {
+.sterling-label.boxed .text {
   margin-left: 0.5em;
 }
