--- a/src/lib/css/Label.css
+++ b/src/lib/css/Label.css
@@ -1,2 +1,4 @@
 @import url('./Label.base.css');
-@import url('./Label.container.css');
+@import url('./Label.boxed.css');
+@import url('./Label.colorful.css');
+@import url('./Label.boxed.colorful.css');
