--- a/src/lib/css/Link.css
+++ b/src/lib/css/Link.css
@@ -1,4 +1,6 @@
 @import url('./Link.base.css');
 @import url('./Link.colorful.css');
 @import url('./Link.ghost.css');
+@import url('./Link.ghost.colorful.css');
 @import url('./Link.undecorated.css');
+@import url('./Link.undecorated.colorful.css');
