--- a/src/lib/css/Slider.base.css
+++ b/src/lib/css/Slider.base.css
@@ -141,6 +141,7 @@
 
 .sterling-slider.disabled .thumb {
   cursor: not-allowed;
+  position: relative;
   outline: none;
 }
 
@@ -148,9 +149,10 @@
   background: repeating-linear-gradient(
     var(--stsv-common--disabled__stripe-angle),
     var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) 3px,
-    var(--stsv-common__background-color2_disabled) 3px,
-    var(--stsv-common__background-color2_disabled) 6px
+    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
+    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
+    var(--stsv-common--disabled__stripe-color--alt)
+      calc(2 * var(--stsv-common--disabled__stripe-width))
   );
   bottom: 0;
   content: '';
