--- a/src/lib/css/Tab.base.css
+++ b/src/lib/css/Tab.base.css
@@ -29,12 +29,12 @@
 }
 
 .sterling-tab.vertical {
-  grid-template-columns: auto 1em;
+  grid-template-columns: 1fr 1em;
   grid-template-rows: 1fr;
+  justify-content: flex-start;
+  justify-items: flex-start;
   align-content: center;
   align-items: center;
-  justify-content: flex-end;
-  justify-items: flex-end;
   column-gap: 0.15em;
   padding: 0.25em 1em;
 }
