Fixed Safari sizing of Callout and Popover

--- a/src/lib/css/Callout.base.css
+++ b/src/lib/css/Callout.base.css
@@ -15,7 +15,7 @@
   display: none;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  height: fit-content;
+  height: auto;
   left: 0;
   overflow: visible;
   position: absolute;
