Fixed menu height

--- a/src/lib/css/Menu.base.css
+++ b/src/lib/css/Menu.base.css
@@ -9,7 +9,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  height: fit-content;
+  height: auto;
   padding: 0.25em;
 }
 
