--- a/src/lib/css/Link.css
+++ b/src/lib/css/Link.css
@@ -2,5 +2,9 @@
 @import url('./Link.colorful.css');
 @import url('./Link.ghost.css');
 @import url('./Link.ghost.colorful.css');
+@import url('./Link.text-underline.css');
+@import url('./Link.text-underline.ghost.css');
 @import url('./Link.undecorated.css');
 @import url('./Link.undecorated.colorful.css');
+@import url('./Link.undecorated.ghost.css');
+@import url('./Link.undecorated.underline.css');
