--- a/src/lib/css/Input.css
+++ b/src/lib/css/Input.css
@@ -1,3 +1,4 @@
 @import url('./Input.base.css');
 @import url('./Input.colorful.css');
+@import url('./Input.disabled.css');
 @import url('./Input.composed.css');
