Separated Button disabled styles

--- a/src/lib/css/Button.base.css
+++ b/src/lib/css/Button.base.css
@@ -19,7 +19,10 @@
   padding: 0.5em 1em;
   text-decoration: none;
   text-overflow: ellipsis;
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
   white-space: nowrap;
   user-select: none;
 }
@@ -42,29 +45,6 @@
   outline-offset: 0;
   outline-style: solid;
   outline-width: 2px;
-}
-
-.sterling-button:disabled {
-  cursor: not-allowed;
-  position: relative;
-}
-
-.sterling-button:disabled::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: repeating-linear-gradient(
-    var(--stsv-common--disabled__stripe-angle),
-    var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt)
-      calc(2 * var(--stsv-common--disabled__stripe-width))
-  );
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion) {
