--- a/src/lib/css/Button.css
+++ b/src/lib/css/Button.css
@@ -5,3 +5,4 @@
 @import url('./Button.secondary.colorful.css');
 @import url('./Button.tool.css');
 @import url('./Button.tool.colorful.css');
+@import url('./Button.disabled.css');
