--- a/src/lib/css/Callout.base.css
+++ b/src/lib/css/Callout.base.css
@@ -41,3 +41,15 @@
   /* The -100% and 200% allow for the drop-shadow to not be clipped */
   clip-path: polygon(-100% -100%, 200% -100%, 200% 200%, -100% -100%);
 }
+
+.sterling-callout.top-start .arrow,
+.sterling-callout.top .arrow,
+.sterling-callout.top-end .arrow {
+  filter: drop-shadow(-1px -2px 1px rgba(0, 0, 0, 0.2));
+}
+
+.sterling-callout.left-start .arrow,
+.sterling-callout.left .arrow,
+.sterling-callout.left-end .arrow {
+  filter: drop-shadow(2px 2px 1px rgba(0, 0, 0, 0.2));
+}
