Separated Dropdown disabled styles

--- a/src/lib/css/Dropdown.base.css
+++ b/src/lib/css/Dropdown.base.css
@@ -14,7 +14,10 @@
   overflow: hidden;
   padding: 0;
   position: relative;
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
 }
 
 .sterling-dropdown:hover {
@@ -31,51 +34,6 @@
   outline-offset: 0;
   outline-style: solid;
   outline-width: 2px;
-}
-
-.sterling-dropdown.disabled {
-  cursor: not-allowed;
-  outline: none;
-}
-
-.sterling-dropdown.disabled .button {
-  cursor: not-allowed;
-}
-
-.sterling-dropdown::after {
-  background: repeating-linear-gradient(
-    var(--stsv-common--disabled__stripe-angle),
-    var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt)
-      calc(2 * var(--stsv-common--disabled__stripe-width))
-  );
-  bottom: 0;
-  content: '';
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  pointer-events: none;
-  transition: opacity 250ms;
-}
-
-.sterling-dropdown.disabled::after {
-  opacity: 1;
-}
-
-.sterling-dropdown.composed,
-.sterling-dropdown.composed:hover,
-.sterling-dropdown.composed.focus {
-  background: none;
-  border: none;
-  outline: none;
-}
-
-.sterling-dropdown.composed.disabled::after {
-  opacity: 0;
 }
 
 .sterling-dropdown > .value {
