--- a/src/lib/css/Dropdown.css
+++ b/src/lib/css/Dropdown.css
@@ -1,2 +1,4 @@
 @import url('./Dropdown.base.css');
 @import url('./Dropdown.colorful.css');
+@import url('./Dropdown.disabled.css');
+@import url('./Dropdown.composed.css');
