--- a/src/lib/css/Label.css
+++ b/src/lib/css/Label.css
@@ -2,3 +2,4 @@
 @import url('./Label.boxed.css');
 @import url('./Label.colorful.css');
 @import url('./Label.boxed.colorful.css');
+@import url('./Label.disabled.css');
