--- a/src/lib/css/Link.css
+++ b/src/lib/css/Link.css
@@ -8,3 +8,4 @@
 @import url('./Link.undecorated.colorful.css');
 @import url('./Link.undecorated.ghost.css');
 @import url('./Link.undecorated.underline.css');
+@import url('./Link.disabled.css');
