--- a/src/lib/css/List.base.css
+++ b/src/lib/css/List.base.css
@@ -13,7 +13,10 @@
   outline: none;
   padding: 0;
   position: relative;
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
 }
 
 .sterling-list.horizontal {
@@ -35,19 +38,6 @@
   outline-offset: 0;
   outline-style: solid;
   outline-width: 2px;
-}
-
-.sterling-list.composed,
-.sterling-list.composed:hover,
-.sterling-list.composed.using-keyboard:focus-within,
-.sterling-list.composed.disabled {
-  background: none;
-  border: none;
-  outline: none;
-}
-
-.sterling-list.disabled * {
-  cursor: not-allowed;
 }
 
 /* ----- container - a layout panel that grows with the items ----- */
@@ -82,10 +72,6 @@
   height: 100%;
   pointer-events: none;
   transition: opacity 250ms;
-}
-
-.sterling-list.disabled .container::after {
-  opacity: 1;
 }
 
 /* ----- media queries ----- */
