--- a/src/lib/css/Select.css
+++ b/src/lib/css/Select.css
@@ -1,3 +1,4 @@
 @import url('./Select.base.css');
 @import url('./Select.colorful.css');
 @import url('./Select.composed.css');
+@import url('./Select.disabled.css');
