--- a/src/lib/css/TreeItemDisplay.css
+++ b/src/lib/css/TreeItemDisplay.css
@@ -1,1 +1,3 @@
 @import url('./TreeItemDisplay.base.css');
+@import url('./TreeItemDisplay.colorful.css');
+@import url('./TreeItemDisplay.disabled.css');
