--- a/src/lib/css/Select.base.css
+++ b/src/lib/css/Select.base.css
@@ -14,7 +14,10 @@
   outline: none;
   padding: 0;
   position: relative;
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
 }
 
 .sterling-select:hover {
@@ -31,35 +34,6 @@
   outline-offset: 0;
   outline-style: solid;
   outline-width: 2px;
-}
-
-.sterling-select.disabled {
-  cursor: not-allowed;
-  outline: none;
-}
-
-.sterling-select::after {
-  background: repeating-linear-gradient(
-    var(--stsv-common--disabled__stripe-angle),
-    var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt)
-      calc(2 * var(--stsv-common--disabled__stripe-width))
-  );
-  bottom: 0;
-  content: '';
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  pointer-events: none;
-  transition: opacity 250ms;
-}
-
-.sterling-select.disabled::after {
-  opacity: 1;
 }
 
 .sterling-select .value {
