--- a/src/lib/css/Slider.css
+++ b/src/lib/css/Slider.css
@@ -1,3 +1,4 @@
 @import url('./Slider.base.css');
 @import url('./Slider.colorful.css');
+@import url('./Slider.disabled.css');
 @import url('./Slider.composed.css');
