--- a/src/lib/css/TextArea.base.css
+++ b/src/lib/css/TextArea.base.css
@@ -22,7 +22,10 @@
   min-height: 3em;
   overflow: hidden;
   resize: var(--TextArea__resize, none);
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
   width: 100%;
 }
 
@@ -42,38 +45,12 @@
   outline-width: 2px;
 }
 
-.sterling-text-area:disabled {
-  cursor: not-allowed;
-  outline: none;
-}
-
-.sterling-text-area::after {
-  background: repeating-linear-gradient(
-    var(--stsv-common--disabled__stripe-angle),
-    var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt)
-      calc(2 * var(--stsv-common--disabled__stripe-width))
-  );
-  bottom: 0;
-  content: '';
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  pointer-events: none;
-  transition: opacity 250ms;
-}
-
-.sterling-text-area.disabled::after {
-  opacity: 1;
-}
-
 .sterling-text-area textarea::placeholder {
   color: var(--stsv-common__color--subtle);
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
 }
 
 @media (prefers-reduced-motion) {
