--- a/src/lib/css/TextArea.composed.css
+++ b/src/lib/css/TextArea.composed.css
@@ -1,5 +1,5 @@
 .sterling-text-area.composed textarea,
-.sterling-text-area.composed:hover textarea:not(:disabled),
+.sterling-text-area.composed:hover textarea,
 .sterling-text-area.composed textarea:focus,
 .sterling-text-area.composed:hover textarea:focus {
   background-color: transparent;
