--- a/src/lib/css/TextArea.css
+++ b/src/lib/css/TextArea.css
@@ -1,3 +1,4 @@
 @import url('./TextArea.base.css');
 @import url('./TextArea.colorful.css');
+@import url('./TextArea.disabled.css');
 @import url('./TextArea.composed.css');
