--- a/src/lib/css/Tree.base.css
+++ b/src/lib/css/Tree.base.css
@@ -10,7 +10,10 @@
   overflow-x: hidden;
   overflow-y: auto;
   margin: 0;
-  transition: background-color 250ms, color 250ms, border-color 250ms;
+  transition:
+    background-color 250ms,
+    color 250ms,
+    border-color 250ms;
 }
 
 .sterling-tree:hover {
@@ -27,10 +30,6 @@
   outline-width: 2px;
 }
 
-.sterling-tree.disabled * {
-  cursor: not-allowed;
-}
-
 /* ----- container - a layout panel that grows with the items ----- */
 
 .sterling-tree .container {
@@ -38,30 +37,6 @@
   flex-direction: column;
   flex-wrap: nowrap;
   position: relative;
-}
-
-.sterling-tree .container::after {
-  background: repeating-linear-gradient(
-    var(--stsv-common--disabled__stripe-angle),
-    var(--stsv-common--disabled__stripe-color),
-    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
-    var(--stsv-common--disabled__stripe-color--alt)
-      calc(2 * var(--stsv-common--disabled__stripe-width))
-  );
-  bottom: 0;
-  content: '';
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-  right: 0;
-  top: 0;
-  transition: opacity 250ms;
-}
-
-.sterling-tree.disabled .container::after {
-  opacity: 1;
 }
 
 /* ----- media queries ----- */
