to svelte5 part1

--- a/src/lib/css/Input.disabled.css
+++ b/src/lib/css/Input.disabled.css
@@ -4,6 +4,12 @@
 }
 
 .sterling-input::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   background: repeating-linear-gradient(
     var(--stsv-common--disabled__stripe-angle),
     var(--stsv-common--disabled__stripe-color),
@@ -12,13 +18,19 @@
     var(--stsv-common--disabled__stripe-color--alt)
       calc(2 * var(--stsv-common--disabled__stripe-width))
   );
-  bottom: 0;
-  content: '';
-  left: 0;
+  pointer-events: none;
+  background: repeating-linear-gradient(
+    var(--stsv-common--disabled__stripe-angle),
+    var(--stsv-common--disabled__stripe-color),
+    var(--stsv-common--disabled__stripe-color) var(--stsv-common--disabled__stripe-width),
+    var(--stsv-common--disabled__stripe-color--alt) var(--stsv-common--disabled__stripe-width),
+    var(--stsv-common--disabled__stripe-color--alt)
+      calc(2 * var(--stsv-common--disabled__stripe-width))
+  );
   opacity: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
   pointer-events: none;
   transition: opacity 250ms;
+}
+.sterling-input.disabled::after {
+  opacity: 1;
 }
