--- a/src/lib/css/MenuItemDisplay.base.css
+++ b/src/lib/css/MenuItemDisplay.base.css
@@ -2,7 +2,7 @@
   align-items: center;
   justify-items: flex-start;
   display: grid;
-  grid-template-columns: 1em 1fr 1em;
+  grid-template-columns: 1em 1fr auto auto;
   column-gap: 0.5em;
   padding: 0.25em;
   position: relative;
@@ -47,6 +47,11 @@
   transform: translate(-50%, -50%);
   transition: background-color 250ms;
   width: 0.5em;
+}
+
+.sterling-menu-item-display .shortcut {
+  font-size: 0.8em;
+  color: var(--stsv-common__color--secondary);
 }
 
 .sterling-menu-item-display .chevron {
