--- a/src/lib/css/Callout.base.css
+++ b/src/lib/css/Callout.base.css
@@ -53,3 +53,7 @@
 .sterling-callout.left-end .arrow {
   filter: drop-shadow(2px 2px 1px rgba(0, 0, 0, 0.2));
 }
+
+.sterling-callout .callout-text {
+  padding: 1em;
+}
