--- a/src/lib/css/Label.base.css
+++ b/src/lib/css/Label.base.css
@@ -36,6 +36,7 @@
   color: var(--stsv-common__color--secondary);
   font-size: 0.8em;
   grid-area: text;
+  margin-right: 0.635em;
 }
 
 .sterling-label .text:empty {
@@ -94,8 +95,8 @@
   text-align: center;
   font-weight: bold;
   box-sizing: border-box;
-  width: 1em;
-  height: 1em;
+  min-width: 1em;
+  min-height: 1em;
   position: absolute;
   top: 0;
   right: 0;
